src/core-crm/objects/PricebookEntry/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount percentage for non standard Pricebooks.</description>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>