src/core-crm/objects/PricebookEntry/fields/Early_Bird_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird_Expiry_Date__c</fullName>
    <label>Early Bird Expiry Date</label>
    <type>Date</type>
</CustomField>