src/core-crm/objects/PricebookEntry/fields/Early_Bird_No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird_No_of_Days__c</fullName>
    <inlineHelpText>This field will control the visibility of the number of days for each product for the early bird price book entry to be removed before offering on Commerce Cloud.</inlineHelpText>
    <label>Early Bird No. of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>