src/core-crm/objects/PricebookEntry/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>Number of days before course offering start date.</description>
    <label>Number of Days</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>