src/core-crm/objects/PricebookEntry/fields/Standard_Price_Available_From__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price_Available_From__c</fullName>
    <label>Standard Price Available From</label>
    <type>Date</type>
</CustomField>